@@ -46,6 +46,7 @@
 - fix configure string length tests for sss library.
 - report map not read when debug logging.
 - duplicate parent options for included maps.
+- update ->timeout() function to not return timeout.
 
 28/06/2011 autofs-5.0.6
 -----------------------
